--- a/cliente/index.html
+++ b/cliente/index.html
@@ -119,6 +119,33 @@
     </div>
 </div>
     
+
+
+
+ <!-- Modal -->
+ <div class="modal fade" id="teamModal" tabindex="-1" role="dialog" aria-labelledby="teamModalLabel" aria-hidden="true">
+    <div class="modal-dialog" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="teamModalLabel">Equipo Asignado</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="modal-body">
+                <p id="teamInfo"></p>
+                <p>Recuerda: las piezas blancas empiezan primero.</p>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-primary" data-dismiss="modal">Entendido</button>
+            </div>
+        </div>
+    </div>
+</div>
+
+
+
+
 <script>
 
         function ini() {
