--- a/cliente/index.html
+++ b/cliente/index.html
@@ -33,7 +33,7 @@
 
     <script src="cliente\clienteRest.js"></script>
     <script src="cliente\controlWeb.js"></script>
-    <script src="cliente\clienteWS.js"></script>
+    <script src="./cliente/clienteWS.js"></script>
     <html>
         
 
@@ -161,12 +161,13 @@
 
 
     <!-- PRODUCCION -->
+     <!--
     <div id="g_id_onload" data-client_id="937465366567-hs9jnojes1i6jmouqce8ghj6183hn6g0.apps.googleusercontent.com"
     data-context="use" data-ux_mode="popup" datalogin_uri="http://procesossoft-yhkqrakm7q-ew.a.run.app" data-callback="onSignIn" dataauto_prompt="false">
-    </div>
-    <!-- <div id="g_id_onload" data-client_id="937465366567-hs9jnojes1i6jmouqce8ghj6183hn6g0.apps.googleusercontent.com"
-    data-context="use" data-ux_mode="popup" datalogin_uri="http://localhost:3000" data-callback="onSignIn" dataauto_prompt="false">
     </div> -->
+     <div id="g_id_onload" data-client_id="937465366567-hs9jnojes1i6jmouqce8ghj6183hn6g0.apps.googleusercontent.com"
+    data-context="use" data-ux_mode="popup" datalogin_uri="http://localhost:3000" data-callback="onSignIn" dataauto_prompt="false">
+    </div>
     <div class="g_id_signin custom-google-button"
        id="g_id_signin"
        data-type="standard"
