--- a/cliente/tablero2.html
+++ b/cliente/tablero2.html
@@ -89,6 +89,15 @@
             padding: 10px;
             border-radius: 5px;
         }
+
+
+        .checkers-container .timer-black {
+            align-self: flex-start;
+        }
+
+        .checkers-container .timer-white {
+            align-self: flex-end;
+        }
     </style>
 </head>
 <body>
